--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -64,3 +64,120 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Your code starts here! */
+
+.top-nav {
+	display: inline-block;
+	word-spacing: 50px;
+	margin: 30px;
+	color: darkgrey;
+	vertical-align: middle;
+}
+
+.top-nav a {
+	color: darkgray;
+	text-decoration: none;
+
+}
+
+.top-nav a:hover {
+	animation-name: nav-an;
+	animation-duration: 1s;
+	animation-fill-mode: forwards;
+}
+
+.title {
+	font-size: 65px;
+	display: inline-block;
+	width: 49%;
+	vertical-align: middle;
+	text-align: center;
+	margin: 20px;
+	margin-top: 50px;
+}
+
+.logo {
+	margin-left: 20px;
+	vertical-align: middle;
+}
+
+.title p {
+	font-size: 20px;
+}
+
+.code-pic {
+	display: inline-block;
+	width: 37%;
+	vertical-align: middle;
+	margin-top: 50px;
+}
+
+.vl {
+	border-bottom: 1px solid black;
+	margin: 20px 0px;
+}
+
+.fullbody {
+	margin: 60px;
+}
+
+.middle-img {
+	width: 100%;
+}
+
+.features {
+	display: inline-block;
+	width: 46%;
+	margin: 5px 12px 38px 12px;
+}
+
+.about {
+	display: inline-block;
+	width: 46%;
+	margin: 5px 12px 38px 12px;
+}
+
+.services {
+	display: inline-block;
+	width: 29%;
+	margin: 38px 12px 10px 12px;
+}
+
+.product {
+	display: inline-block;
+	width: 29%;
+	margin: 38px 12px 10px 12px;
+}
+
+.vision {
+	display: inline-block;
+	width: 29%;
+	margin: 38px 12px 10px 12px;
+}
+
+.contact {
+	display: inline-block;
+	width: 150px;
+	line-height: 1;
+	margin-top: 15px;
+}
+
+.copyright {
+	text-align: center;
+	padding-top: 29px;
+	padding-bottom: 100px;
+}
+
+.get-started-button {
+	background-color: white;
+	color: black;
+	border: 1px solid gray;
+	font-size: 18px;
+	padding: 8px 50px;
+	font-family: 'Titillium Web', sans-serif;
+}
+
+@keyframes nav-an {
+	0% {color: gray;}
+	50% {color: blue;}
+	100% {color: green;}	
+}
